# arrivals-board-server

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  postgres-language-server.jsonc
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-10-28-022053-0000_rename_tables/: down.sql  up.sql
migrations/2025-11-26-003038-0000_users_remove_pw_hash/: down.sql  up.sql
migrations/2025-11-26-003246-0000_fix_tracking_params/: down.sql  up.sql
migrations/2025-11-26-174210-0000_fix_tracking_params/: down.sql
src/: errors.rs  main.rs  models.rs  router.rs  schema.rs
src/controllers/: auth.rs  flights.rs  health.rs  mod.rs  users.rs
src/models/: user.rs
