[package]
name = "arrivals-board-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
diesel = { version = "2.3.3", features = ["postgres", "uuid"] }
diesel-async = { version = "0.7.3", features = ["postgres", "bb8"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"]}
uuid = { version = "1.18.1", features = ["serde", "v4"] }
